--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -5,7 +5,7 @@
  */
 
 body {
-    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -19,7 +19,7 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Josefin Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -42,7 +42,7 @@ hr {
 
 .navbar-brand {
     text-transform: uppercase;
-    font-weight: 900;
+    font-weight: 200;
     letter-spacing: 2px;
 }
 
@@ -80,7 +80,7 @@ hr {
     margin-bottom: 20px;
     padding: 30px 15px;
     background: #fff;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255, 255, 255, 0.9);
 }
 
 .intro-text {
@@ -103,7 +103,7 @@ hr {
 
 footer {
     background: #fff;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255, 255, 255, 0.9);
 }
 
 footer p {
@@ -111,18 +111,18 @@ footer p {
     padding: 50px 0;
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
     .brand {
         display: inherit;
         margin: 0;
         padding: 30px 0 10px;
         text-align: center;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0);
+        font-family: "Josefin Sans", "Quicksand", "Josefin Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
         font-size: 5em;
-        font-weight: 700;
+        font-weight: 300;
         line-height: normal;
-        color: #fff;
+        color: #000000;
     }
 
     .top-divider {
@@ -139,7 +139,7 @@ footer p {
         margin: 0;
         padding: 0 0 40px;
         text-align: center;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0);
         text-transform: uppercase;
         font-size: 1.25em;
         font-weight: 400;
@@ -162,14 +162,14 @@ footer p {
     .navbar-default {
         border: none;
         background: #fff;
-        background: rgba(255,255,255,0.9);
+        background: rgba(255, 255, 255, 0.9);
     }
 
-    .nav>li>a {
+    .nav > li > a {
         padding: 35px;
     }
 
-    .navbar-nav>li>a {
+    .navbar-nav > li > a {
         line-height: normal;
     }
 
@@ -182,10 +182,39 @@ footer p {
     }
 }
 
-@media screen and (min-width:1200px) {
+@media screen and (min-width: 1200px) {
     .box:after {
         content: '';
         display: table;
         clear: both;
     }
+}
+
+.brand > a {
+    color: #000000;
+}
+
+.navbar-nav > li > a {
+    background-color: #ffffff !important;
+    color: #E2E2E2 !important
+}
+
+.navbar-nav > li > a:hover {
+    color: #555555 !important;
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+    color: #555555 !important;
+}
+
+.frontpage-crop {
+    width: 25%;
+    height: 100%;
+    overflow: hidden;
+    float: left;
+}
+.frontpage {
+    margin: 0 auto;
+    float:left;
+    padding: 3px;
 }
