--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,3 @@
-body {
-}
-
 .hovereffect {
     width: 100%;
     height: 100%;
@@ -49,6 +46,8 @@ body {
 }
 
 .hovereffect h2 {
+    font-family: "Josefin Sans", Arial, sans-serif;
+    font-weight: 400;
     text-transform: uppercase;
     text-align: center;
     text-orientation: upright;
