--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -230,3 +230,9 @@ footer p {
         letter-spacing: 3px;
         color: #E2E2E2;
 }
+
+.description {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 200;
+    color: #E2E2E2;
+}
