--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,16 @@
     cursor: default;
 }
 
+.hovereffect-video {
+    width: 50%;
+    overflow: visible !important;
+    user-select: none;
+            -moz-user-select: none;
+            -khtml-user-select: none;
+            -webkit-user-select: none;
+            -o-user-select: none;
+}
+
 .hovereffect .overlay {
     position: absolute;
     overflow: hidden;
@@ -24,6 +34,14 @@
     transform: scale(0,1);
 }
 
+.hovereffect-video .overlay{
+    width: 80%;
+    height: 30px;
+    left: initial;
+    right: 30px;
+    top: 10px;
+}
+
 .hovereffect:hover .overlay {
     opacity: 1;
     filter: alpha(opacity=100);
@@ -35,14 +53,25 @@
 .hovereffect img {
     display: block;
     position: relative;
-    -webkit-transition: all 0.35s;
-    transition: all 0.35s;
+    -webkit-transition: all 0.0s;
+    transition: all 0.0s;
+}
+
+div#gallery> .hovereffect img, justified-gallery>.hovereffect img {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    filter: gray;
 }
 
 .hovereffect:hover img {
     filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
     filter: blur(1px) brightness(0.8);
     -webkit-filter: blur(1px) brightness(0.8);
+}
+
+div#gallery> .hovereffect:hover img, justified-gallery>.hovereffect:hover img {
+    filter: blur(0px) brightness(1.1);
+    -webkit-filter: blur(0px) brightness(1.1);
 }
 
 .hovereffect h2 {
@@ -91,4 +120,15 @@
         writing-mode: horizontal-tb;
 
     }
+}
+
+.vjs-big-play-button {
+    position: relative !important;
+    left: 220px !important;
+    top: 50% !important;
+    font-size: 2em !important
+}
+
+.vjs-big-play-button, vjs-control-bar, vjs-modal-overlay, video-js {
+    z-index: 1;
 }
