--- a/css/index.css
+++ b/css/index.css
@@ -12,10 +12,6 @@
     width: initial;
     overflow: visible !important;
     padding: 0;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -o-user-select: none;
 }
 
 .hovereffect .overlay {
@@ -38,7 +34,7 @@
     width: 80%;
     height: 30px;
     left: initial;
-    right: 30px;
+    right: 44px;
     top: 10px;
 }
 
@@ -122,13 +118,22 @@ div#gallery> .hovereffect:hover img, justified-gallery>.hovereffect:hover img {
     }
 }
 
-.vjs-big-play-button {
-    position: relative !important;
-    left: 220px !important;
-    top: 50% !important;
-    font-size: 2em !important
+.videocontainer{
+    padding: 5px;
 }
-
-.vjs-big-play-button, vjs-control-bar, vjs-modal-overlay, video-js {
-    z-index: 1;
+.videowrapper {
+    float: none;
+    clear: both;
+    width: 100%;
+    position: relative;
+    padding-bottom: 51.5%;
+    padding-top: 25px;
+    height: 0;
+}
+.videowrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
