--- a/css/index.css
+++ b/css/index.css
@@ -78,6 +78,7 @@ div#gallery> .hovereffect:hover img, justified-gallery>.hovereffect:hover img {
     text-orientation: upright;
     -webkit-text-orientation: upright;
     writing-mode: vertical-rl;
+    -webkit-writing-mode: vertical-rl;
     position: absolute;
     margin: 0 5px 0;
     bottom: 0;
